logs/archive/server_error_9.txt
warning: C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_client\Cargo.toml: unused manifest key: dependencies.tokio.getrandom
warning: unused import: `chrono::Utc`
 --> crates\ask_pete_core\src\reflection.rs:4:5
  |
4 | use chrono::Utc;
  |     ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `HashSet`
  --> crates\ask_pete_core\src\lib.rs:11:33
   |
11 | use std::collections::{HashMap, HashSet};
   |                                 ^^^^^^^

warning: unused variable: `pool`
  --> crates\ask_pete_core\src\reflection.rs:17:5
   |
17 |     pool: &PgPool,
   |     ^^^^ help: if this is intentional, prefix it with an underscore: `_pool`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `user_id`
  --> crates\ask_pete_core\src\reflection.rs:18:5
   |
18 |     user_id: i64,
   |     ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_user_id`

warning: unused variable: `challenge_name`
  --> crates\ask_pete_core\src\reflection.rs:19:5
   |
19 |     challenge_name: &str,
   |     ^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_challenge_name`

warning: unused variable: `reflection_text`
  --> crates\ask_pete_core\src\reflection.rs:20:5
   |
20 |     reflection_text: &str,
   |     ^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_reflection_text`

warning: `ask_pete_core` (lib) generated 6 warnings (run `cargo fix --lib -p ask_pete_core` to apply 2 suggestions)
    Checking ask_pete_server v0.1.0 (C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_server)
warning: unused variable: `pool`
  --> crates\ask_pete_server\src\bin\seed_quests.rs:14:9
   |
14 |     let pool = PgPoolOptions::new()
   |         ^^^^ help: if this is intentional, prefix it with an underscore: `_pool`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `ask_pete_server` (bin "seed_quests") generated 1 warning
error[E0425]: cannot find value `sync_vote_inbox` in this scope
   --> crates\ask_pete_server\src\main.rs:134:13
    |
134 |               sync_vote_inbox,
    |               ^^^^^^^^^^^^^^^ help: a function with a similar name exists: `sync_quest_inbox`
    |
   ::: C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_physics\src\systems.rs:373:1
    |
373 | / pub fn sync_quest_inbox(
374 | |     inbox: Res<crate::components::QuestCommandInbox>,
375 | |     mut event_writer: EventWriter<crate::components::StartQuestEvent>,
376 | | ) {
    | |_- similarly named function `sync_quest_inbox` defined here

For more information about this error, try `rustc --explain E0425`.
error: could not compile `ask_pete_server` (bin "ask_pete_server") due to 1 previous error
